# pytubekit

./: .aspell.en.pws  .gcp.conf  .gitignore  .mypy.ini  .services  .spellcheck-words  .tools.versions  .yamllint.yaml  404.html  README.md  README.rst  index.html  package-lock.json  pyproject.toml  requirements.thawed.txt  requirements.txt  rsb.toml  rsconstruct.toml  setup.py  sitemap.xml  suggestions.md
.github/workflows/: docs.yml
architecture/: index.html
cli-reference/: index.html
config/: project.py  python.py  version.py
development/: index.html
doc/: ARCHITECTURE.md  CLI.md  DEVELOPMENT.md  LINKS.txt  OVERVIEW.md  TODO.txt  design.txt  links.txt  quota.txt  suggestions.md  tests.txt
mkdocs/: mkdocs.yml
mkdocs/docs/: architecture.md  cli-reference.md  development.md  index.md  notes.md  quota-guide.md
notes/: index.html
pytubekit/: __init__.py  auth.py  configs.py  constants.py  main.py  scopes.py  static.py  util.py  utils.py  version.py  youtube.py
pytubekit/endpoints/: group_default.py  main.py
quota-guide/: index.html
search/: search_index.json
src/pytubekit/: client_secret.json  configs.py  constants.py  main.py  static.py  util.py  youtube.py
tests/unit_tests/: test_basic.py
