[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytubekit"
version = "0.0.31"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "Pytubekit will allow you to perform operations in your youtube account en masse"
readme = "README.md"
license = "MIT"
keywords=[
    "google",
    "youtube",
    "playlist",
    "videos",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "google-api-python-client",
    "pygooglehelper",
    "pytconf",
    "pylogconf",
    "pyvardump",
    "youtube-dl",
    "browsercookie",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pytubekit"
"Bug Tracker" = "https://github.com/veltzer/pytubekit/issues"
"Documentation" = "https://veltzer.github.io/pytubekit"
"Download" = "https://pypi.org/project/pytubekit/"
"Repository" = "https://github.com/veltzer/pytubekit"

[project.scripts]
pytubekit = "pytubekit.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pytubekit"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pytubekit/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.envs.default]
installer = "uv"
